# text-ql

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
agents/: __init__.py  planner.py  sql_writer.py
api/: __init__.py  models.py  routes.py
app/: __init__.py  main.py
config/: settings.py
frontend/: next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/app/: api.ts  globals.css  layout.tsx  page.tsx
frontend/components/: OutputPanel.tsx  QueryInput.tsx  SchemaInput.tsx
orchestrator/: __init__.py  adk_hybrid_pipeline.py  adk_pipeline.py  root.py
prompts/: planner.txt  sql_writer.txt
schema/: __init__.py  models.py  parser.py
tests/: __init__.py  conftest.py  test_orchestrator.py  test_policy_gate.py  test_schema_parser.py
validation/: __init__.py  policy_gate.py  schema_checker.py
