[project]
name = "text-ql"
version = "0.1.0"
description = "Natural Language to SQL converter using multi-agent architecture"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "google-adk>=1.0.0",
    "google-genai>=1.0.0",
    "groq>=0.11.0",
    "httpx>=0.27.0",
    "mypy>=1.11.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.6.0",
    "uvicorn[standard]>=0.32.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
